<?xml version="1.0" encoding="UTF-8"?>
<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <version>WC-1.0.260408-T1636</version>

    <organization>
        <name>Isygo-it</name>
        <url>https://isygo-it.eu</url>
    </organization>

    <groupId>eu.isygo-it.services</groupId>
    <artifactId>service-core</artifactId>
    <packaging>pom</packaging>

    <name>Wams Core Services</name>
    <description>Wams Core Services Management</description>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.source>17</maven.compiler.source>
        <maven.compiler.target>17</maven.compiler.target>

        <!-- Main service stack version -->
        <isygoit.service.stack.version>WS-1.0.260408-T1636</isygoit.service.stack.version>

        <!-- Spring Boot and Cloud -->
        <spring-boot.version>3.0.7</spring-boot.version>
        <spring-cloud.version>2022.0.3</spring-cloud.version>

        <!-- Libraries -->
        <lombok.version>1.18.26</lombok.version>
        <postgresql.version>42.4.2</postgresql.version>
        <json.version>20230227</json.version>
        <pdfbox.version>3.0.0</pdfbox.version>
        <pdf2dom.version>2.0.3</pdf2dom.version>
        <itextpdf.version>5.5.13.3</itextpdf.version>
        <poi.version>5.2.3</poi.version>
        <mapstruct.version>1.6.3</mapstruct.version>
        <c3p0.version>0.10.0</c3p0.version>
        <minio.version>8.3.7</minio.version>

        <!-- Plugins -->
        <maven-compiler-plugin.version>3.8.1</maven-compiler-plugin.version>
        <maven-deploy-plugin.version>3.1.1</maven-deploy-plugin.version>
    </properties>

    <dependencyManagement>
        <dependencies>
            <!-- Project Internal dependencies -->
            <dependency>
                <groupId>eu.isygo-it.services</groupId>
                <artifactId>service-stack-jpa</artifactId>
                <version>${isygoit.service.stack.version}</version>
            </dependency>
            <dependency>
                <groupId>eu.isygo-it.services</groupId>
                <artifactId>service-stack-shared</artifactId>
                <version>${isygoit.service.stack.version}</version>
            </dependency>
            <dependency>
                <groupId>eu.isygo-it.services</groupId>
                <artifactId>service-stack-web</artifactId>
                <version>${isygoit.service.stack.version}</version>
            </dependency>
            <dependency>
                <groupId>eu.isygo-it.services</groupId>
                <artifactId>service-stack-crypt</artifactId>
                <version>${isygoit.service.stack.version}</version>
            </dependency>
            <dependency>
                <groupId>eu.isygo-it.services</groupId>
                <artifactId>service-stack-parent</artifactId>
                <version>${isygoit.service.stack.version}</version>
                <type>pom</type>
            </dependency>

            <!-- External dependencies -->
            <dependency>
                <groupId>org.projectlombok</groupId>
                <artifactId>lombok</artifactId>
                <version>${lombok.version}</version>
            </dependency>
            <dependency>
                <groupId>org.postgresql</groupId>
                <artifactId>postgresql</artifactId>
                <version>${postgresql.version}</version>
            </dependency>
            <dependency>
                <groupId>org.json</groupId>
                <artifactId>json</artifactId>
                <version>${json.version}</version>
            </dependency>
            <dependency>
                <groupId>org.apache.pdfbox</groupId>
                <artifactId>pdfbox-tools</artifactId>
                <version>${pdfbox.version}</version>
            </dependency>
            <dependency>
                <groupId>net.sf.cssbox</groupId>
                <artifactId>pdf2dom</artifactId>
                <version>${pdf2dom.version}</version>
            </dependency>
            <dependency>
                <groupId>com.itextpdf</groupId>
                <artifactId>itextpdf</artifactId>
                <version>${itextpdf.version}</version>
            </dependency>
            <dependency>
                <groupId>com.itextpdf.tool</groupId>
                <artifactId>xmlworker</artifactId>
                <version>${itextpdf.version}</version>
            </dependency>
            <dependency>
                <groupId>org.apache.poi</groupId>
                <artifactId>poi-ooxml</artifactId>
                <version>${poi.version}</version>
            </dependency>
            <dependency>
                <groupId>org.apache.poi</groupId>
                <artifactId>poi-scratchpad</artifactId>
                <version>5.2.2</version>
            </dependency>
            <dependency>
                <groupId>org.mapstruct</groupId>
                <artifactId>mapstruct-processor</artifactId>
                <version>${mapstruct.version}</version>
            </dependency>
            <dependency>
                <groupId>com.mchange</groupId>
                <artifactId>c3p0</artifactId>
                <version>${c3p0.version}</version>
            </dependency>
            <dependency>
                <groupId>eu.isygo-it.services</groupId>
                <artifactId>service-stack-quartz</artifactId>
                <version>${isygoit.service.stack.version}</version>
            </dependency>
            <dependency>
                <groupId>eu.isygo-it.services</groupId>
                <artifactId>service-stack-cassandra</artifactId>
                <version>${isygoit.service.stack.version}</version>
            </dependency>
            <dependency>
                <groupId>io.minio</groupId>
                <artifactId>minio</artifactId>
                <version>${minio.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <modules>
        <module>01-kms-core</module>
        <module>02-ims-core</module>
        <module>03-mms-core</module>
        <module>04-dms-core</module>
        <module>05-sms-core</module>
        <module>06-cms-core</module>
        <module>07-bpm-core</module>
        <module>10-starter-test</module>
    </modules>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>${maven-compiler-plugin.version}</version>
                <configuration>
                    <source>${maven.compiler.source}</source>
                    <target>${maven.compiler.target}</target>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-deploy-plugin</artifactId>
                <version>${maven-deploy-plugin.version}</version>
                <executions>
                    <execution>
                        <id>default-deploy</id>
                        <phase>deploy</phase>
                        <goals>
                            <goal>deploy</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>

    <distributionManagement>
        <repository>
            <id>isygo-it-github-02</id>
            <name>GitHub isygo-it Apache Maven Packages</name>
            <url>https://maven.pkg.github.com/your-org/02-wams-core</url>
            <snapshots>
                <enabled>true</enabled>
            </snapshots>
        </repository>
    </distributionManagement>


</project>


